[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "nltk>=3.9.2",
    "pip>=25.3",
    "pre-commit>=4.5.1",
    "spacy>=3.8.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*"]
