[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "nltk>=3.9.2",
    "pip>=25.3",
    "pre-commit>=4.5.1",
    "sentence-transformers>=5.2.2",
    "spacy>=3.8.11",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"
    ]

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
